# cc-openclaw

./: .gitignore  .gitmodules  .mcp.json  Makefile  blogpost.md  cc-openclaw-ds.sh  cc-openclaw-glm.local.sh  cc-openclaw-glm.sh  cc-openclaw.local.sh  cc-openclaw.sh  pyproject.toml  sidecar-config.yaml  sidecar-config.yaml.example
.claude/: mcp.json  settings.json
.claude/hooks/: channel-reply-check.sh  feishu-progress-check.sh  notify-channel.sh  pr-auto-record.sh
.claude/skills/: ponytail  ponytail-help  ponytail-review
channel_server/: app.py
channel_server/commands/: __init__.py  context.py  dispatcher.py  errors.py  parse.py  registry.py  scope.py
channel_server/core/: actor.py  handler.py  persistence.py  runtime.py
deploy/: ai.openclaw.channel-server.plist  ai.openclaw.feishu-heartbeat.plist  ai.openclaw.sidecar.plist
docs/: doubao-realtime-api.md
docs/notes/: 2026-05-07-openclaw-5.x-upgrade-findings.md
docs/plans/: 2026-04-13-feishu-integration-design.md  (+14 more)
feishu/: channel-instructions.md  channel.py  channel_server.py  message_parsers.py
openclaw-sidecar-plugin/: index.js  openclaw.plugin.json  package.json
roles/: roles.yaml
sidecar/: __init__.py  api.py  broadcast.py  config.py  config_patch.py  db.py  feishu_events.py  main.py  provisioner.py  reconciler.py
tests/: test_token_server.py
tools/: feishu-notify.py  feishu-ws-probe.py  log-progress.sh
voice/: __init__.py  agent.py  config.py  token_server.py
voice-web/: .gitignore  Makefile  next.config.ts  package.json  pnpm-lock.yaml  server.ts
voice_gateway/: actor_bridge.py  asr_client.py  asr_route.py  config.py  doubao_client.py  protocol.py  pseudo_llm.py  pyproject.toml  server.py  session.py  session_split.py  tts_client.py  tts_route.py
voice_web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+93 files in other folders)
