[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-openclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.3.0",
    "mcp>=1.0.0",
    "anyio>=4.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["feishu"]
