[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-openclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.3.0",
    "mcp>=1.0.0",
    "anyio>=4.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
voice = [
    "livekit-agents>=1.0",
    "livekit-plugins-deepgram",
    "livekit-plugins-fishaudio",
    "livekit-plugins-silero",
    "httpx",
    "aiohttp",
    "livekit-api>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["feishu", "sidecar", "channel_server", "voice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
